--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^8.3.1",
     "imask": "^7.6.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
